--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "ethers": "^5.5.3",
     "mocha": "^10.2.0"
   }
